# AtriNexus

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  Thanks.md  check_time.py  main.py  pyproject.toml  requirements.txt  run.py  test.py  test_benchmark.py  version.json  项目技术文档.md
.github/: pull_request_template.md
data/config/: __init__.py  config.json.template
deployment/: atrinexus.service  setup_vps.sh
dev_tools/: inspect_memory.py
docs/: PROJECT_REMEDIATION_PLAN.md  PROJECT_STRUCTURE.md  agent_tool_orchestration_design.md
docs/ops/: PRODUCTION_RECONCILIATION_CHECKLIST.md  production-backup-runbook.md  production-diff-summary.md  production-import-boundary.md  production-import-manifest-v1.md  production-inventory.md  production-source-reconciliation-runbook.md  reconciliation-report.md
scripts/: check_sensitive_files.py  check_time.py  describe_emojis.py  migrate_sqlite_to_postgres.py  performance_test.py  simple_perf_test.py
src/agent_runtime/: agent_loop.py  agent_service.py  agent_tool_guard.py  clarify_store.py  context_engine.py  default_hooks.py  hooks.py  langchain_agent_service.py  middleware.py  prompt_cache.py  runtime.py  todo_store.py  tool_catalog.py  trajectory.py  user_runtime.py
src/ai/: registry.py  (+5 more)
tests/: conftest.py  test_agent_browse_smoke.py  test_agent_edit_smoke.py  test_agent_hooks.py  test_agent_loop.py  test_agent_todo_smoke.py  test_ai_provider_layer.py  test_clarify_tool.py  test_context_engine.py  test_fast_path_router.py  test_fast_path_switch.py  test_improvements.py  test_loop_guard_relax.py  test_message_handler_abort_command.py  test_message_handler_confirm_reply_shape.py  test_pending_confirmation_handler.py  test_read_file_pagination.py  test_reliability_bundle.py  test_run_command_safebin.py  test_runtime_prompt_capability.py  test_todo_store.py  test_user_runtime.py
(+172 files in other folders)
