[project]
name = "atrinexus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler==3.10.4",
    "asyncpg>=0.30.0",
    "certifi>=2026.1.4",
    "colorama>=0.4.6",
    "cryptography>=3.0.0",
    "emoji==2.10.1",
    "fastapi>=0.115.0",
    "httpx-ws==0.7.2",
    "jieba",
    "langchain>=1.2.0",
    "langchain-openai>=1.0.0",
    "openai>=2.21.0",
    "Pillow>=10.0.0",
    "prometheus_client>=0.20.0",
    "pydantic>=2.10.0",
    "PyMuPDF>=1.24.0",
    "python-dateutil==2.9.0.post0",
    "python-docx>=1.1.0",
    "python-multipart",
    "python-dotenv==1.0.1",
    "psycopg[binary]>=3.2.0",
    "pytz==2024.1",
    "qdrant-client>=1.17.1",
    "rank_bm25",
    "requests>=2.32.5",
    "socksio",
    "sqlalchemy>=2.0.46",
    "structlog>=24.1.0",
    "tavily-python",
    "tenacity>=9.1.4",
    "urllib3>=2.6.3",
    "uvicorn[standard]>=0.34.0",
    "wechatpy[cryptography]>=1.8.0",
    "zhdate>=0.1",
]
